<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:src="@drawable/ic_location"
        android:layout_width="50dp"
        android:layout_height="50dp" />

    <TextView
        android:id="@+id/store_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exemple_name"/>

    <TextView
        android:id="@+id/store_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exemple_address"/>

    <TextView
        android:id="@+id/store_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exemple_phone"/>

</LinearLayout>