<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.views.activities.Details">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/space_main_content_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/store_name_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exemple_name"
            android:textColor="@color/textPrimary"
            android:textSize="25sp"
            android:paddingBottom="@dimen/space_main_content_item"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/space_main_content_item">

            <ImageView
                android:layout_width="@dimen/img_item_location_width"
                android:layout_height="@dimen/img_item_location_height"
                android:src="@drawable/ic_store" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/store_address_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/exemple_address"
                    android:textColor="@color/textSecundary"
                    android:layout_marginLeft="@dimen/text_distance_left"
                    android:layout_marginRight="@dimen/text_distance_right"/>

                <TextView
                    android:id="@+id/store_address_cp_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/exemple_cp"
                    android:textColor="@color/textSecundary"
                    android:layout_marginLeft="@dimen/text_distance_left"
                    android:layout_marginRight="@dimen/text_distance_right"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/space_main_content_item">

            <ImageView
                android:layout_width="@dimen/img_item_location_width"
                android:layout_height="@dimen/img_item_location_height"
                android:src="@drawable/ic_phone" />
            <TextView
                android:id="@+id/store_address_phone_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exemple_phone"
                android:textColor="@color/textSecundary"
                android:layout_marginLeft="@dimen/text_distance_left"
                android:layout_marginRight="@dimen/text_distance_right"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/space_main_content_item">

            <ImageView
                android:layout_width="@dimen/img_item_location_width"
                android:layout_height="@dimen/img_item_location_height"
                android:src="@drawable/ic_admin" />

            <TextView
                android:id="@+id/store_admin_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_distance_left"
                android:layout_marginRight="@dimen/text_distance_right"
                android:text="@string/exemple_admin"
                android:textColor="@color/textSmall" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/img_item_location_width"
                android:layout_height="@dimen/img_item_location_height"
                android:src="@drawable/ic_location" />

            <TextView
                android:id="@+id/store_distance_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_distance_left"
                android:layout_marginRight="@dimen/text_distance_right"
                android:text="@string/exemple_distance"
                android:textColor="@color/textSmall" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exemple_distance_mesure"
                android:textColor="@color/textSmall" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>